--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
     padding: 2rem 0rem;
     display: block;
 }
@@ -66,13 +66,13 @@ h3 {
     font-size: 0.95rem;
     font-weight: 400;
     /* line-height: 1.85; */
-}
+/* }
 
 ul.desc, ul.skills-list, ul.strength-list, ul.lang-list, ul.cert-date {
     padding-left: 1.65rem;
     padding-top: 1.125rem;
     /* line-height: 1.65; */
-}
+/* }
 
 .skills-project {
     width: 40%;
@@ -87,8 +87,8 @@ ul.desc, ul.skills-list, ul.strength-list, ul.lang-list, ul.cert-date {
 
 ul.desc, ul.cert-date {
     list-style-type: ' ☯ ';
-}
-
+} 
+ */
 
 
 
